# Cobot-Arm-6DOF1

./: README.md
cobot_arm_urdf/: CMakeLists.txt  package.xml
cobot_arm_urdf/cache/: homePose.txt  surface.txt
cobot_arm_urdf/cache/waypoints/: waypoints.txt
cobot_arm_urdf/config/: view_robot.rviz
cobot_arm_urdf/launch/: display.launch  gazebo.launch
cobot_arm_urdf/meshes/: End_Tool.STL  Link_0.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  base_link.STL
cobot_arm_urdf/scripts/: frames_view.py  kdl_parser_test.py  tf_test.py  transformation-config.txt
cobot_arm_urdf/src/: fkKDL.cpp  ik_tree.cpp  iter_ik.cpp  kdl_parser.cpp  kinematics.cpp  plugin.cpp  record_and_play.cpp  run_trajectory.cpp  teleop_key.cpp
cobot_arm_urdf/urdf/: Cobot_Arm_URDF.csv  Cobot_Arm_URDF.urdf.old  cobot_arm_urdf.urdf
